@@ -1,5 +1,6 @@
 2.2.3
 -----
+o Identifiers are properly exposed in nested foreach clauses
 o Returns nice error message when using aggregation inside
   of expressions that loop over collections
 o Fixes #4758 - OPTIONAL MATCH when either side is null
